--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview"  // Added start command
+    "start": "vite preview"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
